<resources>
    <string name="app_name">CatsShop</string>
    <string name="ApiName">CatsShop</string>
    <string name="ApiNameRus">Магазин котиков</string>
    <string name="AuthorName">Сидоров Антон Дмитриевич</string>
    <string name="addressUrlDefault">URL</string>
    <string name="textview">TextView</string>
    <string name="YourLogin">Ваш логин</string>
    <string name="YourRoleRus">Ваша роль</string>
    <string name="YourRoleEng">Your role</string>
    <string name="urlEdit">Редактировать URL-ссылку</string>
    <string name="Back">Назад</string>
    <string name="Protocol">Протокол</string>
    <string name="Path">Путь</string>
    <string name="DefaultUrlAddress">url.sidorov</string>
    <string name="TextCancel">Отмена</string>
    <string name="TextSave">Сохранить</string>
    <string name="SignIn">Войти</string>
    <string name="SignOut">Выйти</string>
    <string name="Registrate">Зарегистрироваться</string>
    <string name="SignInToSystem">Войти в аккаунт</string>
    <string name="SignOutFromSystem">Выйти из аккаунта</string>
    <string name="Authorization">Авторизация</string>
    <string name="LoginText">Логин</string>
    <string name="PasswordText">Пароль</string>
    <string name="YourPassword">Ваш пароль</string>
    <string name="ShowPassword">Показывать пароль</string>
    <string name="SaveAccount">Сохранить аккаунт</string>
    <string name="SignInYes">Войти в систему</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="UserSettings">Настройки</string>
    <string name="ProfileAndSettings">Профиль и настройки</string>
    <string name="AddCat">Добавить котика</string>
    <string name="ChangeProfile">Сменить аккаунт</string>
    <string name="Cat">Котик</string>
    <string name="deletecat">Удалить котика</string>
    <string name="updateCat">Изменить котика</string>
    <string name="buyCat">Купить котика</string>
    <string name="ColorLable">Цвет:</string>
    <string name="SpeciesText">Порода:</string>
    <string name="GenderText">Пол:</string>
    <string name="AgeText">Возраст:</string>
    <string name="DateAddedText">Дата добавления:</string>
    <string name="DateUpdatedText">Дата изменения:</string>
    <string name="PriceText">Цена:</string>
    <string name="Changepassword">Сменить пароль</string>
    <string name="DropAccount">Удалить аккаунт</string>
    <string name="ProgramInfo">О приложении</string>
    <string name="zero">0</string>
    <string name="UserManagment">Управление пользователями</string>
    <string name="AddAdminUser">Добавить админа</string>
</resources>