<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".SignInActivity"
    tools:menu="@menu/main_manu">

    <TextView
        android:id="@+id/textViewCatsShop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ApiName"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ApiNameRus"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AuthorName"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewSignInURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addressUrlDefault"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Exit_Click"
        android:text="@string/Back" />

    <TextView
        android:id="@+id/textViewSignInDoing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Authorization"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/LoginText"
                android:textAlignment="textEnd"/>

            <EditText
                android:id="@+id/editTextLoginInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/YourLogin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/PasswordText"
                android:textAlignment="textEnd" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/YourPassword" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBoxShowPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ShowPassword" />

        <CheckBox
            android:id="@+id/checkBoxSaveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SaveAccount" />

        <CheckBox
            android:id="@+id/checkBoxSignInYes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignInYes" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TextCancel"
                android:onClick="Exit_Click" />

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/SignIn" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>