<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UsersListActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UserManagment"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:onClick="Back_Click"/>

    <Button
        android:id="@+id/button11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddAdminUser"
        android:onClick="AddAdmin_Click" />

    <ListView
        android:id="@+id/listViewUsers"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>